--- a/CrashLib/src/main/AndroidManifest.xml
+++ b/CrashLib/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
     package="com.dhcc.crashlib" >
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <application>
+    <application
+        android:networkSecurityConfig="@xml/network_security_config">
         <service
             android:name="com.dhcc.crashlib.service.CrashService"
             android:process="com.dhcc.remote.crashService">
