--- a/CrashLib/build.gradle
+++ b/CrashLib/build.gradle
@@ -1,10 +1,8 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.novoda.bintray-release' // 千万注意空格  多一个空格都无法编译！ 添加bintray插件
 
 android {
     compileSdkVersion 28
-
-
-
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 28
@@ -22,12 +20,27 @@ android {
         }
     }
 
+    dexOptions{
+        jumboMode true
+    }
+
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    compileOnly "com.android.support:appcompat-v7:28.0.0"
-    compileOnly 'com.github.zhaokaiqiang.klog:library:1.6.0'
+    implementation "com.android.support:appcompat-v7:28.0.0"
+    implementation 'com.github.zhaokaiqiang.klog:library:1.6.0'
     //Email的发送组件
     implementation "com.sun.mail:android-mail:1.6.0"
+}
+
+// 配置2
+publish {
+    userOrg = 'logobaby'             // Binary用户名
+    repoName = 'maven'          // Binary上的刚才新建的仓库名（Repository）
+    groupId = 'com.dhcc.crashlib'        // 依赖名compile 'x:y:z '中的包名x
+    artifactId = 'CrashLib'        // 依赖名compile 'x:y:z '中的项目名y
+    publishVersion = '1.0.0'          // 依赖名compile 'x:y:z '中的版本号z
+    desc = 'a crash info collect moudle'            // 对该开源组件的说明
+    website = 'https://github.com/jasoncool/DhccCrashLib'  // VCS地址，即填写项目上传的Github地址
 }
