--- a/CrashLib/src/main/AndroidManifest.xml
+++ b/CrashLib/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <application
         android:networkSecurityConfig="@xml/network_security_config">
         <service
-            android:name="com.dhcc.crashlib.service.CrashService"
+            android:name=".service.CrashService"
             android:process="com.dhcc.remote.crashService">
         </service>
     </application>
