--- a/CrashLib/build.gradle
+++ b/CrashLib/build.gradle
@@ -8,30 +8,22 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
     }
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-    dexOptions{
-        jumboMode true
-    }
-
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "com.android.support:appcompat-v7:28.0.0"
-    implementation 'com.github.zhaokaiqiang.klog:library:1.6.0'
+    compileOnly "com.android.support:appcompat-v7:28.0.0"
+    compileOnly 'com.github.zhaokaiqiang.klog:library:1.6.0'
     //Email的发送组件
-    implementation "com.sun.mail:android-mail:1.6.0"
+    compileOnly "com.sun.mail:android-mail:1.6.0"
 }
 
 // 配置2
@@ -40,7 +32,7 @@ publish {
     repoName = 'maven'          // Binary上的刚才新建的仓库名（Repository）
     groupId = 'com.dhcc.crashlib'        // 依赖名compile 'x:y:z '中的包名x
     artifactId = 'CrashLib'        // 依赖名compile 'x:y:z '中的项目名y
-    publishVersion = '1.0.0'          // 依赖名compile 'x:y:z '中的版本号z
+    publishVersion = '1.0.1'          // 依赖名compile 'x:y:z '中的版本号z
     desc = 'a crash info collect moudle'            // 对该开源组件的说明
     website = 'https://github.com/jasoncool/DhccCrashLib'  // VCS地址，即填写项目上传的Github地址
 }
