--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,5 +23,8 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation project(':CrashLib')
+    implementation 'com.github.zhaokaiqiang.klog:library:1.6.0'
+    //Email的发送组件
+    implementation "com.sun.mail:android-mail:1.6.0"
 
 }
