--- a/CrashLib/build.gradle
+++ b/CrashLib/build.gradle
@@ -20,7 +20,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    compileOnly "com.android.support:appcompat-v7:28.0.0"
+    compileOnly 'androidx.appcompat:appcompat:1.0.2'
     compileOnly 'com.github.zhaokaiqiang.klog:library:1.6.0'
     //Email的发送组件
     compileOnly "com.sun.mail:android-mail:1.6.0"
@@ -32,7 +32,7 @@ publish {
     repoName = 'maven'          // Binary上的刚才新建的仓库名（Repository）
     groupId = 'com.dhcc.crashlib'        // 依赖名compile 'x:y:z '中的包名x
     artifactId = 'CrashLib'        // 依赖名compile 'x:y:z '中的项目名y
-    publishVersion = '1.0.3'          // 依赖名compile 'x:y:z '中的版本号z
+    publishVersion = '1.0.4'          // 依赖名compile 'x:y:z '中的版本号z
     desc = 'a crash info collect moudle'            // 对该开源组件的说明
     website = 'https://github.com/jasoncool/DhccCrashLib'  // VCS地址，即填写项目上传的Github地址
 }
