--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,12 +20,10 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation project(':CrashLib')
     implementation 'com.github.zhaokaiqiang.klog:library:1.6.0'
     //Email的发送组件
     implementation "com.sun.mail:android-mail:1.6.0"
-    implementation 'me.weishu:free_reflection:2.0.0'
-
 }
